# onetime-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_deb.sh
deb-src/: control
src/: args.rs  config.rs  error.rs  fs.rs  lib.rs  main.rs  otp.rs
tests/: integration_tests.rs
tests/files_original/files_2/: file2.txt.otp.0  file2.txt.otp.1
