[package]
name = "onetime-cli"
version = "0.4.1"
authors = ["einfachIrgendwer0815"]
license = "MIT"
edition = "2021"
description = "Encrypt / decrypt files using the one-time pad."
repository = "https://github.com/einfachIrgendwer0815/onetime-cli"
keywords = ["otp", "one-time-pad", "cli", "encryption", "file-encryption"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.8"
md5-rs = "0.1.5"
scopeguard = "1.1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
